spacing issues

--- a/huskysync/src/Login.css
+++ b/huskysync/src/Login.css
@@ -22,6 +22,7 @@
     background-color: white;
     min-height: 100vh;
     display: flex;
+    align-items:flex-start;
     font-size: calc(10px + 2vmin);
     color: white;
   }
@@ -101,4 +102,34 @@
     margin-top: 10px;
     margin-left: 0px;
   }
+
+  #hello {
+    color: purple;
+  }
   
+  #create {
+    font-size: medium;
+  }
+
+  #email {
+    margin-bottom: 0px;
+    font-size: smaller;
+  }
+
+  #password {
+    margin-bottom: 0px;
+    font-size: smaller;
+  }
+
+  #forgotpass {
+    font-size: small;
+    margin-left: 100px;
+  }
+
+  #remPass {
+    display:flex;
+  }
+
+  #remid {
+    font-size: small;
+  }
